# Oxide-Lab-Mobile

./: .editorconfig  .gitignore  FINAL_DEBUG_SETUP.md  QUICK_DEBUG_GUIDE.md  README.md  build.gradle.kts  debug_native.bat  debug_setup.md  gradle.properties  lint.xml  manual_debug.bat  settings.gradle.kts  temp.txt  temp_gguf_reader.py
.cursor/: ui.md
.cursor/rules/: candle-architecture.mdc  candle-basics.mdc  candle-complete-guide.mdc  candle-huggingface.mdc  candle-performance.mdc  candle-practical-guide.mdc  candle-testing.mdc  clean-code-principles.mdc  file-size-best-practices.mdc  gradle-best-practices-2025.mdc  kotlin-best-practices-2025.mdc  rust-2024-edition.mdc  ui-ux-design-2025.mdc
.github/: copilot-instructions.md
app/: build.gradle.kts
app/src/androidTest/java/com/oxidelabmobile/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/oxidelabmobile/: MainActivity.kt  ModelDownloader.kt  RustInterface.kt
app/src/main/java/com/oxidelabmobile/navigation/: Navigation.kt
app/src/main/java/com/oxidelabmobile/ui/accessibility/: Accessibility.kt
app/src/main/java/com/oxidelabmobile/ui/components/: Components.kt  ComposerField.kt  Gestures.kt  ProgressBar.kt  SmartInput.kt
app/src/main/java/com/oxidelabmobile/ui/screens/about/: AboutScreen.kt
app/src/main/java/com/oxidelabmobile/ui/screens/empty/: EmptyStateScreen.kt
app/src/main/java/com/oxidelabmobile/ui/screens/lab/: ActiveLabScreen.kt
app/src/main/java/com/oxidelabmobile/ui/screens/setup/: ModelSetupScreen.kt  ModelSetupScreenNew.kt
app/src/main/java/com/oxidelabmobile/ui/screens/thinking/: ThinkingModeScreen.kt
app/src/main/java/com/oxidelabmobile/ui/theme/: Color.kt  Shape.kt  Theme.kt  Tokens.kt  Type.kt
app/src/main/res/drawable/: arrow_square_out.xml  arrow_up.xml  background_gradient.xml  button_gradient_background.xml  caret_down.xml  caret_up.xml  circle_notch.xml  download_simple.xml  folder_simple.xml  gear_fill.xml  gemini.xml  gemma.xml  ic_launcher_foreground.xml  icon_background_circle.xml  icon_background_gradient.xml  info.xml  list__1_.xml  qwen.xml  recycle.xml  sidebar_simple.xml  sliders_horizontal.xml  sparkle.xml  splash_icon_adaptive.xml  stop.xml  stop_circle.xml  trash.xml  wrench.xml  x.xml
app/src/main/res/font/: inter.xml  montserrat.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-v31/: themes.xml
app/src/main/rust/: CMakeLists.txt  Cargo.toml  README.md  build.bat  build.sh  temp_gguf_reader.py
app/src/main/rust/.cargo/: config.toml
app/src/main/rust/src/: jni_bridge.rs  lib.rs  main.rs  model_inference.rs  model_manager.rs  tests.rs
app/src/main/rust/src/chatbot/: mod.rs
app/src/test/java/com/oxidelabmobile/: ExampleUnitTest.kt  LinterTest.kt
config/detekt/: detekt.yml
docs/: CRASH_FIX_DOCUMENTATION.md  LINTING.md
gradle/wrapper/: gradle-wrapper.properties
scripts/: lint.bat  lint.sh
