[package]
name = "oxide_lab_mobile"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
android_logger = "0.13"
android-activity = { version = "0.5", features = [ "native-activity" ] }
candle-core = { git = "https://github.com/huggingface/candle.git", tag = "0.9.1" }
candle-nn = { git = "https://github.com/huggingface/candle.git", tag = "0.9.1" }
jni = "0.21"
hf-hub = { version = "0.4", default-features = false, features = ["ureq", "rustls-tls"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "unwind"
debug = true
opt-level = 0

[profile.release]
panic = "unwind"
debug = true