[package]
name = "oxide_lab_mobile"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
android_logger = "0.13"
android-activity = { version = "0.5", features = [ "native-activity" ] }
candle-core = { git = "https://github.com/huggingface/candle.git", rev = "9fe6232" }
candle-nn = { git = "https://github.com/huggingface/candle.git", rev = "9fe6232"}
candle-transformers = { git = "https://github.com/huggingface/candle.git", rev = "9fe6232"}
tokenizers = { version = "0.22", default-features = false, features = ["onig", "unstable_wasm"] }
safetensors = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
minijinja = "2.12"
jni = "0.21"
thiserror = "1.0"
once_cell = "1.19"
parking_lot = "0.12"
futures = "0.3"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "unwind"
debug = true
opt-level = 0

[profile.release]
panic = "unwind"
debug = true